<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiRu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_box_hint">Start typing word</string>
    <string name="title_activity_translations">Translations</string>
    <string name="action_import_voc">Import vocabulary</string>
    <string name="action_backup_voc">Backup vocabulary</string>
    <string name="action_reset_voc">Reset vocabulary</string>
    <string name="action_add_to_voc">Add to vocabulary</string>
    <string name="action_remove_from_voc">Remove from vocabulary</string>
    <string name="title_activity_stat">Statistics</string>
    <string name="action_show_stats">Show statistics</string>
    <string name="title_activity_exam_result">Exam result</string>
    <string name="action_activity_exam_next">New exam</string>
    <string name="action_activity_exam_home">Back to home</string>
    <string name="action_rev_search">Search translations</string>
    <string name="title_activity_search_trans">Translations</string>
    <string name="search_box_trans_hint">Start typing translation</string>
    <string name="drawer_open">Show main menu</string>
    <string name="drawer_close">Hide menu</string>
    <string name="action_switch_search">Switch search</string>
</resources>
