<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.burnevsky.firu.SearchActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings_light"
        android:showAsAction="always"
        android:title="@string/action_settings"/>

	<item
	    android:id="@+id/action_more"
	    android:icon="@drawable/ic_action_overflow_light"
	    android:showAsAction="always"
	    android:title="More">
	    <menu>
		    <item
		        android:id="@+id/action_backup_voc"
		        android:showAsAction="never"
		        android:title="@string/action_backup_voc"/>
		    
		    <item
		        android:id="@+id/action_reset_voc"
		        android:showAsAction="never"
		        android:title="@string/action_reset_voc"/>
		
		    <item
		        android:id="@+id/action_import_voc"
		        android:showAsAction="never"
		        android:title="@string/action_import_voc"/>
		    
		    <item
		        android:id="@+id/action_show_stats"
		        android:showAsAction="never"
		        android:title="@string/action_show_stats"/>

		</menu>
	</item>    
</menu>